# citeable

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: linters.yml  release.yml  testing_develop.yml
src/citeable/: __init__.py  _entries.py  _json.py  _parser.py
tests/: test_entries.py  test_parser.py  test_serialise.py
