[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citeable"
version = "2026.3.2b1"
description = "Structured BibTeX citations for cogent3 plugins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]


[dependency-groups]
dev = ["cogapp", "mypy", "nox", "pytest", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/citeable"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
